--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@react-oauth/google": "^0.11.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
