--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-query": "^3.39.3",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.16.0",
     "yup": "^1.3.2"
