--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "font-awesome": "^4.7.0",
     "formik": "^2.4.5",
     "jwt-decode": "^3.1.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dnd": "^16.0.1",
